refactorings within Editable QA Tab - to simplify and to be consistent - in progress