@@ -19,9 +19,9 @@ public class QAStepRowSource implements RowSource {
     }
 
     public Object[] values() {
-        return new Object[] { new Long(source.getVersion()), source.getName(), source.getWho(),
-                format(source.getWhen()), source.getProgram(), Boolean.valueOf(source.isRequired()),
-                new Float(source.getOrder()), source.getResult(), source.getStatus() };
+        return new Object[] { new Integer(source.getVersion()), source.getName(), Boolean.valueOf(source.isRequired()),
+                source.getOrder() + "", source.getStatus(), format(source.getWhen()), source.getWho(),
+                source.getResult(), source.getProgram(), source.getProgramArguments() };
     }
 
     private Object format(Date date) {
